# GenAI-Control-Plane

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  genai-control-plane-codex-prompt.md  package-lock.json  package.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 61c09ecbe563_initial_control_plane_schema.py  9a3f0f8c2d4b_add_lifecycle_job_payload.py  c7b51f423b08_add_notification_delivery_state.py  d8f2b7c1a901_add_auth_sessions.py  e4a1c9b2d3f0_update_google_provider_names.py
apps/api/app/: __init__.py  main.py  schemas.py
apps/api/app/api/: access_requests.py  approvals.py  audit.py  auth.py  developer.py  evidence.py  extensions.py  health.py  incidents.py  lifecycle_jobs.py  notifications.py  policies.py  projects.py  providers.py  reassignments.py  reports.py  role_changes.py  usage.py  webhooks.py
apps/api/app/auth/: dependencies.py  oidc.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/models/: entities.py  enums.py
apps/api/app/observability/: middleware.py
apps/api/app/providers/: base.py  profiles.py  registry.py
apps/api/app/providers/live/: __init__.py  adapter.py
apps/api/app/services/: audit.py  lifecycle.py  notifications.py  policies.py  reports.py  seed.py  state_machine.py  visibility.py
apps/api/app/workers/: jobs.py  scheduler.py
apps/api/scripts/: seed.py
apps/api/tests/: conftest.py  test_access_requests.py  test_migrations.py  test_provider_adapters.py  test_state_machine.py
docs/: architecture.md  (+8 more)
(+30 files in other folders)
